Subindo o projeto pro servidor do GitHub.com

--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -1,11 +1,20 @@
 <ion-header>
   <ion-navbar>
     <ion-title>
-      About
+      Sobre
     </ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
+
+<ion-card>
+  <ion-card-header>
+    Sobre o Minha Corrida
+  </ion-card-header>
+  <ion-card-content>
+    Este aplicativo, disponível para Android, Windows Phone e iOS, também é um comparador de preços. Você inclui os itens na lista de compras e ele mostra para você as diferenças de preços entre os supermercados. A integração entre a versão web e o aplicativo facilitam na hora de consultar as listas. E o app ainda permite que você utilize a câmera do seu smartphone para scanear o código de barras dos produtos, facilitando a busca.
+  </ion-card-content>
+</ion-card>
 
 </ion-content>
