--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,17 +1,109 @@
 <ion-header>
-  <ion-navbar>
-    <ion-title>Home</ion-title>
-  </ion-navbar>
+	<ion-navbar>
+		<ion-title>Página Inicial</ion-title>
+	</ion-navbar>
 </ion-header>
-
 <ion-content padding>
-  <h2>Welcome to Ionic!</h2>
-  <p>
-    This starter project comes with simple tabs-based layout for apps
-    that are going to primarily use a Tabbed UI.
-  </p>
-  <p>
-    Take a look at the <code>src/pages/</code> directory to add or change tabs,
-    update any existing page or create new pages.
-  </p>
+	<h2>Bem vindo ao Minha Corrida</h2>
+		<ion-card>
+			<ion-item>
+				<ion-icon name="football" item-start large></ion-icon>
+				<h2>Campo de Futebol</h2>
+				<p>11 N. Way St, Madison, WI 53703</p>
+			</ion-item>
+			<ion-item>
+				<ion-icon name="wine" item-left large ></ion-icon>
+				<h2>Teatro Municipal</h2>
+				<p>14 S. Hop Avenue, Madison, WI 53703</p>
+			</ion-item>
+			<ion-item>
+				<span item-left>18 min</span>
+				<span item-left>(2.6 mi)</span>
+				<button ion-button icon-left clear item-end>
+					<ion-icon name="navigate"></ion-icon>Iniciar    
+				</button>
+			</ion-item>
+		</ion-card>
+		<ion-card>
+			<ion-item>
+				<ion-icon name="football" item-start large></ion-icon>
+				<h2>Campo de Futebol</h2>
+				<p>11 N. Way St, Madison, WI 53703</p>
+			</ion-item>
+			<ion-item>
+				<ion-icon name="wine" item-left large ></ion-icon>
+				<h2>Teatro Municipal</h2>
+				<p>14 S. Hop Avenue, Madison, WI 53703</p>
+			</ion-item>
+			<ion-item>
+				<span item-left>18 min</span>
+				<span item-left>(2.6 mi)</span>
+				<button ion-button icon-left clear item-end>
+					<ion-icon name="navigate"></ion-icon>Iniciar    
+				</button>
+			</ion-item>
+		</ion-card>
+		<ion-card>
+			<ion-item>
+				<ion-icon name="football" item-start large></ion-icon>
+				<h2>Campo de Futebol</h2>
+				<p>11 N. Way St, Madison, WI 53703</p>
+			</ion-item>
+			<ion-item>
+				<ion-icon name="wine" item-left large ></ion-icon>
+				<h2>Teatro Municipal</h2>
+				<p>14 S. Hop Avenue, Madison, WI 53703</p>
+			</ion-item>
+			<ion-item>
+				<span item-left>18 min</span>
+				<span item-left>(2.6 mi)</span>
+				<button ion-button icon-left clear item-end>
+					<ion-icon name="navigate"></ion-icon>Iniciar    
+				</button>
+			</ion-item>
+		</ion-card>
+		<ion-card>
+			<ion-item>
+				<ion-icon name="football" item-start large></ion-icon>
+				<h2>Campo de Futebol</h2>
+				<p>11 N. Way St, Madison, WI 53703</p>
+			</ion-item>
+			<ion-item>
+				<ion-icon name="wine" item-left large ></ion-icon>
+				<h2>Teatro Municipal</h2>
+				<p>14 S. Hop Avenue, Madison, WI 53703</p>
+			</ion-item>
+			<ion-item>
+				<span item-left>18 min</span>
+				<span item-left>(2.6 mi)</span>
+				<button ion-button icon-left clear item-end>
+					<ion-icon name="navigate"></ion-icon>Iniciar    
+				</button>
+			</ion-item>
+		</ion-card>
+		<ion-card>
+			<ion-item>
+				<ion-icon name="football" item-start large></ion-icon>
+				<h2>Campo de Futebol</h2>
+				<p>11 N. Way St, Madison, WI 53703</p>
+			</ion-item>
+			<ion-item>
+				<ion-icon name="wine" item-left large ></ion-icon>
+				<h2>Teatro Municipal</h2>
+				<p>14 S. Hop Avenue, Madison, WI 53703</p>
+			</ion-item>
+			<ion-item>
+				<span item-left>18 min</span>
+				<span item-left>(2.6 mi)</span>
+				<button ion-button icon-left clear item-end>
+					<ion-icon name="navigate"></ion-icon>Iniciar    
+				</button>
+			</ion-item>
+		</ion-card>
+	
+	<ion-fab right bottom>
+		<button ion-fab (click)="doAlert()">
+			<ion-icon name="add"></ion-icon>
+		</button>
+	</ion-fab>
 </ion-content>
