--- a/src/pages/intro/intro.html
+++ b/src/pages/intro/intro.html
@@ -11,7 +11,7 @@
           <img src="assets/imgs/loremipsum-logo.png" alt="">
           <h6>
               <i>
-                  "Lorem ipsum dolor sit amet, consectetur adipiscing elit."
+                  "Lorem ipsum dolor sit amet, consectetur adipiscing elit"
                   
               </i>
           </h6>
