--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -1,7 +1,7 @@
 <ion-tabs>
   <ion-tab [root]="tab1Root" tabTitle="Home" tabIcon="home"></ion-tab>
   <ion-tab [root]="tab2Root" tabTitle="Sobre" tabIcon="information-circle"></ion-tab>
-  <ion-tab [root]="tab3Root" tabTitle="Compras" tabIcon="contacts"></ion-tab>
+  <ion-tab [root]="tab3Root" tabTitle="Catalógo" tabIcon="contacts"></ion-tab>
   <ion-tab [root]="tab4Root" tabTitle="Feed" tabIcon="md-paper"></ion-tab>
 
 </ion-tabs>
