--- a/src/pages/feed/feed.html
+++ b/src/pages/feed/feed.html
@@ -14,6 +14,10 @@
 
 
 <ion-content padding>
+  <ion-refresher (ionRefresh)="doRefresh($event)">
+    <ion-refresher-content></ion-refresher-content>
+  </ion-refresher>
+
   <ion-card *ngFor="let filme of lista_filmes">
     <ion-item>
       <ion-avatar item-start>
@@ -38,7 +42,7 @@
       </ion-col>
       <ion-col>
         <button ion-button icon-left clear small>
-         
+
         </button>
       </ion-col>
       <ion-col>
@@ -48,6 +52,10 @@
         </button>
       </ion-col>
     </ion-row>
+
+    <button ion-button block (click)="abrirDetalhes(filme)">
+      Detalhes
+    </button>
 
   </ion-card>
 
