--- a/src/pages/feed/feed.html
+++ b/src/pages/feed/feed.html
@@ -23,7 +23,7 @@
       <ion-avatar item-start>
         <img [src]="'https://image.tmdb.org/t/p/w300/' + filme.backdrop_path">
       </ion-avatar>
-      <h2>{{ filme.original_title }}</h2>
+      <h2>{{ filme.title }}</h2>
       <p>{{ filme.release_date }}</p>
     </ion-item>
 
