--- a/src/pages/filme-detalhes/filme-detalhes.html
+++ b/src/pages/filme-detalhes/filme-detalhes.html
@@ -7,7 +7,7 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>FilmeDetalhes</ion-title>
+    <ion-title>Detalhes do Filme</ion-title>
   </ion-navbar>
 
 </ion-header>
@@ -20,7 +20,7 @@
           <ion-avatar item-start>
             <img [src]="'https://image.tmdb.org/t/p/w300/' + filme.backdrop_path">
           </ion-avatar>
-          <h2>{{ filme.original_title }}</h2>
+          <h2>{{ filme.title }}</h2>
           <p>{{ filme.release_date }}</p>
         </ion-item>
     
