--- a/src/pages/intro/intro.html
+++ b/src/pages/intro/intro.html
@@ -64,7 +64,7 @@
         <p>
             Existem muitas variações disponíveis de passagens de Lorem Ipsum, mas a maioria sofreu algum tipo de alteração...
         </p>
-        <a (click)="goToTabsPage()">Continuar</a>
+        <button ion-button outline  (click)="goToTabsPage()">Continuar</button>
       </div>
     </ion-slide>
 
